--- a/index.html
+++ b/index.html
@@ -3,12 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="CSS\normalize.css">
-    <link href="CSS\style.css">
+    <link rel="stylesheet" href="CSS/normalize.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link rel="stylesheet" href="CSS/style.css">
+    
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="header">
+        <nav>
+            <img class="crunchyroll_logo" src="IMG\61362637f5966900044cbf70.png"alt="logo crunchyroll">
+            <a href="#">Novedades</a>
+            <a href="#">Popular</a>
+            <a href="#">Simulcast</a>
+            <a href="#">Categoria <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
+            </svg></a>
+            <a href="#">|</a>
+            <a href="#">Juegos</a>
+            <a href="">Noticias <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
+            </svg></a>
+        </nav>
+    </div>
 </body>
 </html>
