--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     </svg></a>
         </nav>
     </div>
+    
     <div class="front_page">
         <button type="button">
             <a href="https://www.crunchyroll.com/es/watch/G7PU41K82/im-used-to-it">
@@ -33,54 +34,69 @@
             </a> 
         </button>
     </div>
+        <h3>Muestra de la temporada invierno 2025</h3>
+        <h5>¡Disfruta de estos nominados de forma gratuita por tiempo limitado!</h5>
+
     <div class="anime_list">
-        <div class="card" style="width: 18rem;">
+        <div class="card text-white bg-dark mb-3" style="width: 18rem;margin: 1rem;">
             <img class="card-img-top" src="CSS\IMG\attackontitan.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Attack On Titan</h5>
               <p class="card-text">Muchos años atrás, la humanidad estuvo al borde de la extinción con la aparición de unas criaturas gigantes que devoraban todas las personas. Huyendo, la humanidad logro sobrevivir...</p>
-              <a href="https://www.crunchyroll.com/es/series/GR751KNZY/attack-on-titan" class="btn btn-primary">ver ahora</a>
+              <a href="https://www.crunchyroll.com/es/series/GR751KNZY/attack-on-titan" class="btn btn-outline-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play" viewBox="0 0 16 16">
+                <path d="M10.804 8 5 4.633v6.734zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696z"/>
+              </svg></i></a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card text-white bg-dark mb-3" style="width: 18rem;margin: 1rem;">
             <img class="card-img-top" src="CSS\IMG\dandadan.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Dan Da DAN</h5>
               <p class="card-text">Cuando Momo, una estudiante de preparatoria de una familia de médiums espirituales, conoce a su compañero Okarun, un friki del ocultismo, discuten: Momo cree en los fantasmas pero no el los extraaterrestres, y Okarun... </p>
-              <a href="https://www.crunchyroll.com/es/series/GG5H5XQ0D/dan-da-dan" class="btn btn-primary">ver ahora</a>
+              <a href="https://www.crunchyroll.com/es/series/GG5H5XQ0D/dan-da-dan" class="btn btn-outline-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play" viewBox="0 0 16 16">
+                <path d="M10.804 8 5 4.633v6.734zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696z"/>
+              </svg></i></a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card text-white bg-dark mb-3" style="width: 18rem; margin: 1rem">
             <img class="card-img-top" src="CSS\IMG\jujutsukaisen.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Jujutsu Kaisen</h5>
               <p class="card-text">¡Sigue al joven Yuji Itadori en esta serie de acción sobrenatural mientras entrena como hechicero y explora el violento mundo de las maldiciones!
             </p>
-              <a href="https://www.crunchyroll.com/es/series/GRDV0019R/jujutsu-kaisen" class="btn btn-primary">ver ahora</a>
+              <a href="https://www.crunchyroll.com/es/series/GRDV0019R/jujutsu-kaisen"class="btn btn-outline-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play" viewBox="0 0 16 16">
+                <path d="M10.804 8 5 4.633v6.734zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696z"/>
+              </svg></i></a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card text-white bg-dark mb-3" style="width: 18rem;margin: 1rem;">
             <img class="card-img-top" src="CSS\IMG\spy.jpe" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Spy x Family</h5>
               <p class="card-text">Todo el mundo tiene una parte de sí mismos que no puede mostrar a los demás. En una era en la que las naciones de todo el mundo se encuentran involucradas en una feroz guerra de información a puerta cerrada, Ostania y...</p>
-              <a href="https://www.crunchyroll.com/es/series/G4PH0WXVJ/spy-x-family" class="btn btn-primary">ver ahora</a>
+              <a href="https://www.crunchyroll.com/es/series/G4PH0WXVJ/spy-x-family" class="btn btn-outline-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play" viewBox="0 0 16 16">
+                <path d="M10.804 8 5 4.633v6.734zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696z"/>
+              </svg></i></a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card text-white bg-dark mb-3" style="width: 18rem;margin: 1rem;">
             <img class="card-img-top" src="CSS\IMG\onepiece.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">One Piece</h5>
               <p class="card-text"> Embárcate en el viaje de tu vida con One Piece. La épica serie de anime creada por el renombrado mangaka Eiichiro Oda es un fenómeno global que ha cautivado los corazones de varias generaciones de fánaticos a lo largo de 25 años. Esta...</p>
-              <a href="https://www.crunchyroll.com/es/series/GRMG8ZQZR/one-piece" class="btn btn-primary">ver ahora</a>
+              <a href="https://www.crunchyroll.com/es/series/GRMG8ZQZR/one-piece" class="btn btn-outline-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play" viewBox="0 0 16 16">
+                <path d="M10.804 8 5 4.633v6.734zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696z"/>
+              </svg></i></a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card text-white bg-dark mb-3" style="width: 18rem;margin: 1rem;">
             <img class="card-img-top" src="CSS\IMG\drstone.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Dr.Stone</h5>
               <p class="card-text"> Senku es un joven extremadamente inteligente con un gran don para la ciencia y una ácida personalidad, y su mejor amigo es Taiju, que es muy buena persona pero más apto para usar los músculos que para pensar. Cuando tras cierto incidente toda la humanidad acaba convertida en piedra, ellos...</p>
-              <a href="https://www.crunchyroll.com/es/series/GYEXQKJG6/dr-stone" class="btn btn-primary">ver ahora</a>
+              <a href="https://www.crunchyroll.com/es/series/GYEXQKJG6/dr-stone" class="btn btn-outline-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play" viewBox="0 0 16 16">
+                <path d="M10.804 8 5 4.633v6.734zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696z"/>
+              </svg></i></a>
             </div>
         </div>
         
